<resources>
    <string name="app_name" translatable="false">Ziyogram</string>
    <string name="clientId" translatable="false">949050265517-en16rp8fsvgnujf8164tmks32iag821t.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search…</string>
    <string name="writing_text">Writing text…</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="app_info">App info</string>
    <string name="app_version">App version</string>
    <string name="contact_us">Contact</string>
    <string name="exit">Exit</string>
</resources>